# e2e_ml

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyprject.toml  pyproject.toml  requirements.in  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: workflow.yaml
Example notebooks/Binary classification - Titianic survival dataset/: Binary classification - Titanic survival with LGBM and 1-fold CV.ipynb  Binary classification - Titanic survival with Max voting ensemble.ipynb  Binary classification - Titanic survival with Vowpal Wabbit.ipynb  Binary classification - Titanic survival with Xgboost and 10-fold CV.ipynb
Example notebooks/Build custom pipeline - Multiclass classification on steel plate fault dataset/: Multiclass classification with Catboost - Steel plate faults.ipynb  Multiclass classification with custom pipeline - Steel plate faults.ipynb  faults.csv
Example notebooks/Housing prices (regression)/: Housing prices regression with Ngboost.ipynb
Example notebooks/NLP with transformers/: Binary classification with BERT - Disaster tweets.ipynb  Multiclass  classification with BERT - COVID twitter comment sentiment analysis.ipynb
Example notebooks/Regression - Housing prices/: Regression - Housing prices with Ngboost.ipynb
Example notebooks/Time series using Autoarima/: Time series - Predict Air passengers using Autoarima.ipynb  (+1 more)
classification/: blueprints.py  classification_blueprints.py  classification_models.py  cpu_preprocessing.py
docs/: Makefile
full_preprocessing/: cpu_preprocessing.py
full_processing/: cpu_preprocessing.py  cpu_processing_nlp.py  postprocessing.py
model_utils/: save_and_load.py
regression/: regression_blueprints.py  regression_models.py
test/: blueprints_test.py  classification_blueprints_test.py  regression_blueprints_test.py
time_series/: time_series_preprocessing.py
(+60 files in other folders)
