[tool.poetry]
name = "e2eml"
version = "2.10.02"
description = "An end-to-end solution for automl"
authors = ["Thomas Meißner <meissnercorporation@gmx.de>"]
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
homepage = "https://github.com/ThomasMeissnerDS/e2e_ml"
repository = "https://github.com/ThomasMeissnerDS/e2e_ml"
readme = "README.md"
packages = [
    { include = "e2eml" },
]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
boostaroota = "^1.3"
catboost = "^0.21"
category_encoders = "2.3.0" # changed to also include newer versions
dill = "^0.3.3"
imbalanced-learn = "^0.8"
imgaug = "0.2.5"
lightgbm = "^3.1.0"
matplotlib = "3.1.3" # pinned due to cannot import _png error
ngboost = "^0.3.1"
nltk = "^3.2.4"
numpy = "^1.19.4"
optuna = "^2.5.0"
pandas = "^1.1.5"
plotly = "^5.4.0"
psutil = "5.8.0"
pytorch_tabnet = "^3.1.1"
seaborn = "^0.11.1"
scikit-learn = "^1.0.1"
scipy = "^1.5.4"  # 1.6.3 before
setuptools = "^51.1.0"
shap = "^0.39.0"
spacy = "^3.1.0"
textblob = "^0.15.3"
torch = "^1.7.0"
transformers = "^4.0.0"
vowpalwabbit = "^8.11.0"
xgboost = "^1.3.3"

cupy = { version = "^8.1.0", optional = true }
cython = { version = "^0.29.21", optional = true }
ipython = { version = "^7.10.0", optional = true }
notebook = { version = "^6.1.0", optional = true }

[tool.poetry.dev-dependencies]
ipython = "^7.10.0"
jupyter_core = "^4.7.0"
pytest = "^6.2.5"
setuptools = "51.1.0"
twine = "1.13.0"
wheel = "0.36.2"
Sphinx = "^4.3.1"

[tool.poetry.extras]
rapids = ["cupy", "cython"]
jupyter = ["ipython", "jupyter_core", "notebook"]
full = ["cupy", "cython", "ipython", "jupyter_core", "notebook"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
